--- a/Frame/Layout/1_Navigation/mainnav.html
+++ b/Frame/Layout/1_Navigation/mainnav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar">&nbsp;</span>
             <span class="icon-bar">&nbsp;</span>
             <span class="icon-bar">&nbsp;</span></button>
-        <a class="navbar-brand" href="https://www.NineNeins.com"><span class="glyphicon glyphicon-fire">&nbsp;</span>9-Neins</a></section>
+        <a class="navbar-brand" href="https://9neinsg.github.io/NineNein/"><span class="glyphicon glyphicon-fire">&nbsp;</span>9-Neins</a></section>
 <!-- Navbar links -->
     <section class="collapse navbar-collapse" id="navbar">
         <ul class="nav navbar-nav">
@@ -18,38 +18,66 @@
                     <svg width="25px" height="25px" class="blog-vect icon" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">   
                     <path fill="#999999" d="M204.055 213.905q-18.12-5.28-34.61-9a145.92 145.92 0 0 1-6.78-44.33c0-65.61 42.17-118.8 94.19-118.8 52.02 0 94.15 53.14 94.15 118.76a146.3 146.3 0 0 1-6.16 42.32q-20.52 4.3-43.72 11.05c-22 6.42-39.79 12.78-48.56 16.05-8.72-3.27-26.51-9.63-48.51-16.05zm-127.95 84.94a55.16 55.16 0 1 0 55.16 55.15 55.16 55.16 0 0 0-55.16-55.15zm359.79 0a55.16 55.16 0 1 0 55.16 55.15 55.16 55.16 0 0 0-55.15-55.15zm-71.15 55.15a71.24 71.24 0 0 1 42.26-65v-77.55c-64.49 0-154.44 35.64-154.44 35.64s-89.95-35.64-154.44-35.64v74.92a71.14 71.14 0 0 1 0 135.28v7c64.49 0 154.44 41.58 154.44 41.58s89.99-41.55 154.44-41.55v-9.68a71.24 71.24 0 0 1-42.26-65z"/></svg></span></div>
                 <ul class="dropdown-menu">
-                    <li><a href="https://www.NineNeins.com/blog.html">Main</a></li>
-                    <li role="separator" class="divider">&nbsp;</li>
-                    <li><a href="https://www.NineNeins.com/B-Topic/GreyingErrorBlog.html">GreyingError</a></li>
-                    <li role="separator" class="divider">&nbsp;</li>
-                </ul>
-            </li></ul>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/books">Books</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints">Saints</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/music">Music</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/video">Video</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/arcade">Arcade</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/Inspiration">Movies</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingErrorBlog">GEBLOG</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/SoftWare">SoftWare</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/HardWare">HardWare</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/Tech/CryptoTalk">Crypto</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Code/FashCode">FashCode</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Graphic/FashPhoto">FashPhoto</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Audio/FashAlong">FashAlong</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Synopsis">Synopsis</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Race">Race</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Religion">Religion</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/Shield">Shield</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TimeLine">TimeLine</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/B-Topic/GreyingError/LNST/TriForce">TriForce</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/blog">Blog</a></li>
+                    <li><a href="https://9neinsg.github.io/NineNein/shop">Shop</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li role="separator" class="divider"></li>
+                </ul></li></ul>
+
         <ul class="nav navbar-nav navbar-left">
-            <li><form class="navbar-form navbar-left" role="search">
+            <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
                     <input type="text" id="search" class="form-control" placeholder="Search NineNeins"></div></form>
             <div id="template" class="topic-card">
                 <div class="topic-image topic-link">
-                    <img src="" alt="searchimg"></div>
+                    <img src=""></div>
                 <div class="topic-info">
                     <h1 class="name"></h1>
-                    <h1 class="link"></h1></div></div></li></ul>
+                    <h1 class="link"></h1>
+                </div></div></ul>
         <ul class="nav navbar-nav navbar-left">
-            <li><button type="button" class="btn btn-default" style="margin:7px">9-Online</button></li></ul>
+            <li><div type="" class="btn btn-default" style="margin:7px">9-Online</div></li></ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
                 <div class="btn btn-shoppe" style="margin:7px" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                 <span>
                     <svg fill="#999999" width="18px" height="18px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0C5.365 0 0 5.373 0 12.015c0 1.335.228 2.607.618 3.81h3.577V5.729L12 13.545l7.805-7.815v10.095h3.577c.389-1.203.618-2.475.618-3.81C24 5.375 18.635 0 12 0zm-1.788 15.307l-3.417-3.421v6.351H1.758C3.87 21.689 7.678 24 12 24s8.162-2.311 10.245-5.764h-5.04v-6.351l-3.386 3.421-1.788 1.79-1.814-1.79h-.005z"/></svg></span></div>
                 <ul class="dropdown-menu" aria-labelledby="about">
-                    <li>&nbsp;</li>
+                    <li></li>
                     <li><a href="" target="_blank">Promos</a></li>
-                    <li><a href="https://www.Nineneins.com/B-Topic/NatSoc/saints" target="_blank">Support</a></li>
+                    <li><a href="" target="_blank">Support</a></li>
                     <li><a href="" target="_blank">PowerLevel</a></li>
+                    <!--
+                    Support Us
+                    <li><a href="https://ninenein.com/FashShop/InGame/powerlevel">Contribute</a></li></br>
+                    Help
+                    <li><a href="">FAQ</a></li>-->
                 </ul></li></ul>
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <button class="btn-SocialNavSwitch">
+                <div class="btn-SocialNavSwitch">
                 <span>
                     <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024" class="icon">
                         <path fill="#999999" d="M767.99994 585.142857q75.995429 0 129.462857 53.394286t53.394286 129.462857-53.394286 129.462857-129.462857 53.394286-129.462857-53.394286-53.394286-129.462857q0-6.875429 1.170286-19.456l-205.677714-102.838857q-52.589714 49.152-124.562286 49.152-75.995429 0-129.462857-53.394286t-53.394286-129.462857 53.394286-129.462857 129.462857-53.394286q71.972571 0 124.562286 49.152l205.677714-102.838857q-1.170286-12.580571-1.170286-19.456 0-75.995429 53.394286-129.462857t129.462857-53.394286 129.462857 53.394286 53.394286 129.462857-53.394286 129.462857-129.462857 53.394286q-71.972571 0-124.562286-49.152l-205.677714 102.838857q1.170286 12.580571 1.170286 19.456t-1.170286 19.456l205.677714 102.838857q52.589714-49.152 124.562286-49.152z"></path></svg></span>
@@ -58,7 +86,6 @@
                         <a href="https://gab.com/GreyingError" target="_blank" rel="noopener noreferrer">
                         <svg height="30" width="30" class="gab-vect icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                         <path fill="currentColor" d="M446.53 97.43C439.67 60.23 407.19 32 368 32c-39.23 0-71.72 28.29-78.54 65.54C126.75 112.96-.5 250.12 0 416.98.11 451.9 29.08 480 64 480h304c8.84 0 16-7.16 16-16 0-17.67-14.33-32-32-32h-79.49l35.8-48.33c24.14-36.23 10.35-88.28-33.71-106.6-23.89-9.93-51.55-4.65-72.24 10.88l-32.76 24.59c-7.06 5.31-17.09 3.91-22.41-3.19-5.3-7.08-3.88-17.11 3.19-22.41l34.78-26.09c36.84-27.66 88.28-27.62 125.13 0 10.87 8.15 45.87 39.06 40.8 93.21L469.62 480H560c8.84 0 16-7.16 16-16 0-17.67-14.33-32-32-32h-53.63l-98.52-104.68 154.44-86.65A58.16 58.16 0 0 0 576 189.94c0-21.4-11.72-40.95-30.48-51.23-40.56-22.22-98.99-41.28-98.99-41.28zM368 136c-13.26 0-24-10.75-24-24 0-13.26 10.74-24 24-24 13.25 0 24 10.74 24 24 0 13.25-10.75 24-24 24z"></path></svg></a></li>
-                    
                     <li>
                         <a href="https://www.minds.com/greyingerror9/" target="_blank" rel="noopener noreferrer">
                         <svg height="30" width="30" class="mind-vect icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
@@ -67,12 +94,11 @@
                         <a href="https://github.com/9NeinsG" target="_blank" rel="noopener noreferrer">
                         <svg height="30" width="30" class="git-vect icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024">
                         <path fill="currentColor" d="M950.930286 512q0 143.433143-83.748571 257.974857t-216.283429 158.573714q-15.433143 2.852571-22.601143-4.022857t-7.168-17.115429l0-120.539429q0-55.442286-29.696-81.115429 32.548571-3.437714 58.587429-10.313143t53.686857-22.308571 46.299429-38.034286 30.281143-59.977143 11.702857-86.016q0-69.12-45.129143-117.686857 21.138286-52.004571-4.534857-116.589714-16.018286-5.12-46.299429 6.290286t-52.589714 25.161143l-21.723429 13.677714q-53.174857-14.848-109.714286-14.848t-109.714286 14.848q-9.142857-6.290286-24.283429-15.433143t-47.689143-22.016-49.152-7.68q-25.161143 64.585143-4.022857 116.589714-45.129143 48.566857-45.129143 117.686857 0 48.566857 11.702857 85.723429t29.988571 59.977143 46.006857 38.253714 53.686857 22.308571 58.587429 10.313143q-22.820571 20.553143-28.013714 58.88-11.995429 5.705143-25.746286 8.557714t-32.548571 2.852571-37.449143-12.288-31.744-35.693714q-10.825143-18.285714-27.721143-29.696t-28.306286-13.677714l-11.410286-1.682286q-11.995429 0-16.603429 2.56t-2.852571 6.582857 5.12 7.972571 7.460571 6.875429l4.022857 2.852571q12.580571 5.705143 24.868571 21.723429t17.993143 29.110857l5.705143 13.165714q7.460571 21.723429 25.161143 35.108571t38.253714 17.115429 39.716571 4.022857 31.744-1.974857l13.165714-2.267429q0 21.723429 0.292571 50.834286t0.292571 30.866286q0 10.313143-7.460571 17.115429t-22.820571 4.022857q-132.534857-44.032-216.283429-158.573714t-83.748571-257.974857q0-119.442286 58.88-220.306286t159.744-159.744 220.306286-58.88 220.306286 58.88 159.744 159.744 58.88 220.306286z"></path></svg></a></li>
-                    </ul></button></li></ul>
-    </section></main>
+                    </ul></div></li></ul></section>
+    </main>
 
 <section class="topics"></section>
 <!-- End Production Navigation -->
-
 <script id="9Search">
     //NineNeins Search
 $(function(){$("#search").on("keyup",function(){$(".topics").html("");var i=$.trim(this.value);i&&(i=i.toLowerCase(),$.each(topicsArray,function(a,n){-1!=n.name.toLowerCase().indexOf(i)&&$(".topics").append('<div class="topic-card"><span class="topic-info">'+n.name+'</span><br/><a class="topic-link" href="'+n.link+'"><img class="topic-image topic-link" src="'+n.image+'"></a></div>')})),$(".not-found").toggle(0==$(".topics").find("img").length)})});
