Folder Location Successful

--- a/Frame/CSS/ALL_Images.css
+++ b/Frame/CSS/ALL_Images.css
@@ -1871,19 +1871,16 @@
    /*Contact*/
         .cont-Gab, .cont-Minds, .cont-Teleg, .cont-SessI, .cont-Sess {border: 0; height: 88px; width: 88px;}
         .cont-Gab {
-            background: url('./Images/Blog/zNatSoc/Contact/gabicon.png');
+            background: url('./../../Images/Blog/zNatSoc/Contact/gabicon.png');
         }
         .cont-Minds {
-            background: url('./../../../Images/Blog/zNatSoc/Contact/mindsicon.png');
+            background: url('./../..//Images/Blog/zNatSoc/Contact/mindsicon.png');
         }
         .cont-Teleg {
-            background: url('./../../../Images/Blog/zNatSoc/Contact/teleicon.png');
+            background: url('./../../Images/Blog/zNatSoc/Contact/teleicon.png');
         }
         .cont-SessI {
-            background: url('./../../../Images/Blog/zNatSoc/Contact/Sessicon.png');
-        }
-        .cont-Sess {
-            background: url('./../../../Images/Blog/zNatSoc/Contact/Session.png');
+            background: url('./../../Images/Blog/zNatSoc/Contact/Sessicon.png');
         }
     /*Affiliates*/
         .spon-Glass, .spon-Brave, .spon-Wond, .feat-Empire, .feat-100, .feat-Bianca {width: 281px;}
