Change Onclick to Link

--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -12,5 +12,8 @@
         <section aria-label="HomeWrap">
             <div class="btn-1 center-block">
                 <h3 class="panel-title tc">
-                <a style="center" target="popup" onclick="window.open('./blog','popup','_blank'); return false;"><span>Check Blog</span></a></h3></div><br></section></div>
+                    <a style="center" href="blog"
+                        <span>Check Blog</span>
+                    </a></h3></div>
+            <br></section></div>
         </section></div>
