--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -10,10 +10,20 @@
                 sponsors, hypotheses, opinion pieces, and articles<br> are all available for everything 9-Neins development.</p> 
 <!--Button -->
         <section aria-label="HomeWrap">
+
+            <div class="container-fluid tc"><br>
+                <section aria-label="GEBlog">
+                    <div class="panel">
+                        <div class="panel-body">
+                            <div class="btn-1 center-block">
+                                <a style="center" href="blog"><span>Check Blog</span></a></div>
+                        </div></div></section></div>
+
+
             <div class="btn-1 center-block">
                 <h3 class="panel-title tc">
-                    <a style="center" href="blog"
-                        <span>Check Blog</span>
-                    </a></h3></div>
-            <br></section></div>
+                
+                <a style="center" target="popup" onclick="window.open('','popup','_blank'); return false;"
+
+                <a style="center" target="popup" onclick="window.open('./blog','popup','_blank'); return false;"><span>Check Blog</span></a></h3></div><br></section></div>
         </section></div>
