--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -16,12 +16,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="btn-1 center-block">
-                                <a style="center" href="/blog"><span>Check Blog</span></a></div>
+                                <a style="center" href="/blog.html"><span>Check Blog</span></a></div>
                         </div></div></section></div>
-
-
-            <div class="btn-1 center-block">
-                <h3 class="panel-title tc">
-
-                <a style="center" target="popup" onclick="window.open('/blog','popup','_blank'); return false;"><span>Check Blog</span></a></h3></div><br></section></div>
         </section></div>
+    </section></div>
