Fixed Few presentation oversights

--- a/Frame/Layout/2_Intro/saintintro.html
+++ b/Frame/Layout/2_Intro/saintintro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
-        <p id="sainti" class="section-heading text-muted">o/ Saints</p>
-        <span class="icon9add icon9-lightning" style="font-size: 60px">&nbsp;</span>
-        <p class="section-heading text-muted">The Saints' most banned texts.</p></section></div> 
+        <h2 id="sainti" class="section-heading">o/ Saints</h2>
+        <span class="icon9add icon9-lightning" style="font-size: 60px"></span>
+        <p class="text-light">The Saints' most banned texts.</p></section></div>
