--- a/Frame/Layout/2_Intro/videointro.html
+++ b/Frame/Layout/2_Intro/videointro.html
@@ -1,5 +1,5 @@
 <div class="panel-body">
     <section class="intro">
-        <p id="videoi" class="section-heading text-muted">Video Library</p>
-        <span class="icon9add icon9-tv" style="font-size: 60px">&nbsp;</span>
-        <p class="section-heading text-muted">Documentaries about reality</p></section></div> 
+        <h2 id="movieI" class="section-heading">Video Library</h2>
+        <span class="icon9add icon9-tv" style="font-size: 60px"></span>
+        <p class="text-light">Documentaries about reality</p></section></div>
