attempt name link scheme

--- a/Frame/Layout/3_Content/greyingmob.html
+++ b/Frame/Layout/3_Content/greyingmob.html
@@ -125,7 +125,7 @@
                             </span><br>
                             <p>Everything Code</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Code/FashCode','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Code/FashCode','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="FPE" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -135,7 +135,7 @@
                             <span class="img-responsive center-block InspireB IB-PhotoH">&nbsp;</span><br>
                             <p>Everything Visuals</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Graphic/FashPhoto','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Graphic/FashPhoto','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="FAE" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -145,7 +145,7 @@
                             <span class="img-responsive center-block InspireB IB-AudioH">&nbsp;</span><br>
                             <p>Everything Audio.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/GreyingError/Music/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Music/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Javeline" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -194,7 +194,7 @@
                             <span class="img-responsive center-block InspireB ls-LNSTBthum">&nbsp;</span><br>
                             <p>The adventure starts here.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/Synopsis','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Synopsis','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTShieItem" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -204,7 +204,7 @@
                             <span class="img-responsive center-block InspireB ll-LNSTBthum">&nbsp;</span><br>
                             <p>Shield Items. Why are they important?</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/Shield','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Shield','popup','_blank'); return false;"><span>Read</span></a></div>
                             </div></div></section>
                 <section aria-label="LNSTTimes" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -214,7 +214,7 @@
                             <span class="img-responsive center-block InspireB tl-LNSTBthum">&nbsp;</span><br>
                             <p>Time is one of my favorite topics!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/TimeLine','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/TimeLine','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTForced" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -224,7 +224,7 @@
                             <span class="img-responsive center-block InspireB lf-LNSTBthum">&nbsp;</span><br>
                             <p>The most iconic symbol in the gaming world.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/TriForce','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/TriForce','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="LNSTGenes" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -234,7 +234,7 @@
                             <span class="img-responsive center-block InspireB lr-LNSTBthum">&nbsp;</span><br>
                             <p>Race is real, race matters, race is everything!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/Race','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Race','popup','_blank'); return false;"><span>Read</span></a></div>
                             </div></div></section>
                 <section aria-label="LNSTChrist" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -244,6 +244,6 @@
                             <span class="img-responsive center-block InspireB lc-LNSTBthum">&nbsp;</span><br>
                             <p>Did Zelda leave anything out? No!</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="popup" onclick="window.open('https://9neinsg.github.io/NineNein/GreyingError/LNST/Religion','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="popup" onclick="window.open('GreyingError/LNST/Religion','popup','_blank'); return false;"><span>Read</span></a></div>
                             </div></div></section>
                         </div></section></div></div></div></section>
