Removed html extension

--- a/Frame/Layout/3_Content/blogmob.html
+++ b/Frame/Layout/3_Content/blogmob.html
@@ -21,7 +21,7 @@
                             <h2>GreyingError</h2>
                             <p>This evaluation covers several topics, such as the specifics, subtleties, and project development.</p><br>
                             <div class="btn-1 center-block">
-                                <a style="center" href="B-Topic/GreyingErrorBlog.html"><span>Read</span></a></div>
+                                <a style="center" href="B-Topic/GreyingErrorBlog"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="FAQBlog" class="col-xl-4 col-lg-4 col-md-4 col-sm-4">
                     <div class="panel">
