--- a/Frame/Layout/3_Content/greyingmob.html
+++ b/Frame/Layout/3_Content/greyingmob.html
@@ -16,7 +16,7 @@
                             <span class="img-responsive center-block InspireB IB-SoftH">&nbsp;</span>
                             <br><p>Everything from Browser, Sublime, Programs to Creation.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/Tech/SoftWare','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('Tech/SoftWare','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Hardw" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -26,7 +26,7 @@
                             <span class="img-responsive center-block InspireB IB-HardH">&nbsp;</span><br>
                             <p>Everything from MotherBoard, CPU, to Periphrials.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/Tech/HardWare','popup','_blank'); return false;"><span>Read</span></a></div> 
+                                <a style="center" target="_blank" onclick="window.open('Tech/HardWare','popup','_blank'); return false;"><span>Read</span></a></div> 
                         </div></div></section>
                 <section aria-label="Ctyptow" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -36,7 +36,7 @@
                             <span class="img-responsive center-block InspireB IB-HardH">&nbsp;</span><br>
                             <p>Everything Crypto, Why, and Reasoning.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/Tech/CryptoTalk','popup','_blank'); return false;"><span>Read</span></a></div> 
+                                <a style="center" target="_blank" onclick="window.open('Tech/CryptoTalk','popup','_blank'); return false;"><span>Read</span></a></div> 
                         </div></div></section>
                     </div></section></div></div>
     <!--Main-->
@@ -55,7 +55,7 @@
                             <span class="img-responsive center-block InspireB IB-BookH">&nbsp;</span><br>
                             <p>A Library of Literature.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/books','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/books','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Manie" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -65,7 +65,7 @@
                             <span class="img-responsive center-block InspireB IB-SaintH">&nbsp;</span><br>
                             <p>A Collection of Words.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/saints','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Vide" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -75,7 +75,7 @@
                             <span class="img-responsive center-block InspireB IB-VidH">&nbsp;</span><br>
                             <p>An Archive of Videos.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/video','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/video','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Muse" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -85,7 +85,7 @@
                             <span class="img-responsive center-block InspireB IB-MusicH">&nbsp;</span><br>
                             <p>A Playlist of Lyrics.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/music','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/music','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Gamee" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -95,7 +95,7 @@
                             <span class="img-responsive center-block InspireB IB-GameH">&nbsp;</span><br>
                             <p>A Set of Predecessors.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/arcade','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/arcade','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Filme" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
@@ -105,7 +105,7 @@
                             <span class="img-responsive center-block InspireB IB-MovieH">&nbsp;</span><br>
                             <p>An Inspiration of Works.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('https://9neinsg.github.io/NineNein/B-Topic/NatSoc/inspiration','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('NatSoc/inspiration','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                     </div></section></div></div>
     <!--Main-->
@@ -145,7 +145,7 @@
                             <span class="img-responsive center-block InspireB IB-AudioH">&nbsp;</span><br>
                             <p>Everything Audio.</p>
                             <div class="btn-1 center-block">
-                                <a style="center" target="_blank" onclick="window.open('GreyingError/Music/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
+                                <a style="center" target="_blank" onclick="window.open('GreyingError/Audio/FashAlong','popup','_blank'); return false;"><span>Read</span></a></div>
                         </div></div></section>
                 <section aria-label="Javeline" class="col-xl-4 col-lg-4 col-md-4 col-sm-6">
                     <div class="panel">
