Removed Html Extension

--- a/Frame/Layout/6_ReadMore/homeinfowrap.html
+++ b/Frame/Layout/6_ReadMore/homeinfowrap.html
@@ -16,7 +16,7 @@
                     <div class="panel">
                         <div class="panel-body">
                             <div class="btn-1 center-block">
-                                <a style="center" href="./blog.html"><span>Check Blog</span></a></div>
+                                <a style="center" href="./blog"><span>Check Blog</span></a></div>
                         </div></div></section></div>
         </section></div>
     </section></div>
