--- a/Frame/CSS/ALL_Images.css
+++ b/Frame/CSS/ALL_Images.css
@@ -464,7 +464,7 @@
                         background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/ForgiveTypos.png');
                     }
                     .sd-Roofss {
-                        background: url('./../../../Images/Blog/zNatSoc/Books/Saints/D-Saint/ForgiveTypos.png');
+                        background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/ForgiveTypos.png');
                     }
                     .sd-Breivik {
                         background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/Breivik.png');
@@ -504,16 +504,16 @@
                     }
                 /*Support*/
                     .sd-Roofss {
-                        background: url('./../../../Images/Blog/zNatSoc/Books/Saints/D-Saint/ForgiveTyposSS.png');
+                        background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/ForgiveTyposSS.png');
                     }
                     .sd-EarnestLetterss {
-                        background: url('./../../../Images/Blog/zNatSoc/Books/Saints/D-Saint/EarnestLetter.png');
+                        background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/EarnestLetter.png');
                     }
                     .sd-Halesss {
-                        background: url('./../../../Images/Blog/zNatSoc/Books/Saints/D-Saint/Hale.png');
+                        background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/Hale.png');
                     }
                     .sd-BowerOpticss {
-                        background: url('./../../../Images/Blog/zNatSoc/Books/Saints/D-Saint/GoingIn.png');
+                        background: url('./../../Images/Blog/zNatSoc/Books/Saints/D-Saint/GoingIn.png');
                     }
         /*Music*/
             .musicm, .musicm-mm {height: 120px; width: 120px;}
