--- a/Frame/Layout/6_ReadMore/bookinfowrap.html
+++ b/Frame/Layout/6_ReadMore/bookinfowrap.html
@@ -6,7 +6,7 @@
             <hgroup class="section-header">
                 <h2 class="icon9add icon9-info-sign text-primary" style="font-size:40px"></h2>
                 <h4>The Books</h4></hgroup>
-            <p class="text-muted">This list is cited as a grand overview of varying topics.<br><a href="https://9neinsg.github.io/NineNein/B-Topic/NatSoc/saints" target="_blank">The Saint's Manifestos are also available by clicking here.</a></p>
+            <p class="text-muted">This list is cited as a grand overview of varying topics.<br><a href="https://www.NineNeins.com/B-Topic/NatSoc/saints" target="_blank">The Saint's Manifestos are also available by clicking here.</a></p>
 <!--Button -->
             <section aria-label="BookWrap">
                 <div class="btn-1 center-block">
@@ -21,13 +21,14 @@
                     <section aria-label="PopCultured" class="comment-content">
                         <hgroup class="bible-content tc">
                             <h5>Reasoning Noone Cares About</h5></hgroup>
-                        <p>These books are not hosted here for free to skip purchasing them - but simply to disseminate crucial knowledge and encourage greater comprehension of the materials presented.</p>
-                        <p>I have left out more complex compositions, including some from amazing authors and philosophers for the sole reason their work surpasses the 9-Neins mission.</p>
+                        <p>The purpose of hosting these books here is not to deter readers from buying them; rather, it is to provide essential information and promote a more thorough comprehension of the subjects covered.
+                        <br><br>
+                        I have omitted more intricate pieces, authored by brilliant writers and philosophers, solely because their contributions go beyond the scope of the 9-Neins objective.</p>
                         <hgroup class="bible-content tc">
                             <h5>Scope of Left Out</h5></hgroup>
-                        <p>There are still a few Titles in which I have not decided on whether to add to the list and most likely will not such as :
-                        <a href="https://comparet.christogenea.org/" target="_blank">Comparet</a>, Coughlin, and other writings/books/authors on the topic of Christianity in which I feel <a href="https://christogenea.org/" target="_blank">Christogenea</a> better serves such works.</p> 
-                        <p>The idea of NineNeins - is only to give a quick starting point per topic over many aspects and not a Grand Collection; which needs to be discovered on ones own - such as:
+                        <p>Examples of titles I have decided not to include in the list are :<br>
+                        <a href="https://comparet.christogenea.org/" target="_blank">Comparet</a>, Coughlin, Mrtin Luther, and other writings/books/authors on the topic of Christianity in which I feel <a href="https://christogenea.org/" target="_blank">Christogenea</a> better serves such works.</p> 
+                        <p>NineNeins' concept is not to provide a Grand Collection, but rather to provide a rapid beginning place for each topic covering a wide range of topics that one must explore independently, which includes:
                             <a target="popup" onclick="window.open('https://www.ebay.com/sch/i.html?_from=R40&amp;_trksid=p2334524.m570.l1313&amp;_nkw=The+World+As+Will+And+Idea%3A+3+vols+in+1+%5Bunabridged%5D&amp;_sacat=0&amp;LH_TitleDesc=0&amp;_odkw=The+World+As+Will+And+Idea%3A+3+Vols+In+1+%5BUnabridged%5D&amp;_osacat=0','popup','width=600,height=600'); return false;">Arthur Schopenhauer</a>, 
                             <a target="popup" onclick="window.open('https://www.ebay.com/sch/i.html?_from=R40&amp;_trksid=p2334524.m570.l1313&amp;_nkw=The+Bell+Curve%3A+Intelligence+and+Class+Structure+in+American&amp;_sacat=0&amp;LH_TitleDesc=0&amp;_odkw=The+bell+Curve&amp;_osacat=0','popup','width=600,height=600'); return false;">Murrays "The Bell Curve"</a>,
                             or the incredible works of
@@ -41,7 +42,7 @@
                                 <a href="https://shop.aer.io/ClemensBlairLLC" target="_blank">Thomas Dalton</a>, 
                                 <a href="https://christogenea.com/catalog/christogenea-softcover-books" target="_blank">Finck</a>, Goodrich,
                             and last but most certainly not least <a href="https://www.fidelitypress.org" target="_blank">Michael E Jones</a> whom are in fact included within this list - solely due to the fact their contributions are way too valuable not to be.</p> 
-                            <p class="tc">They deserve to be compensated for their scholarly endeavors.</p> 
+                            <p class="tc">I urge anyone who appreciates such authorship to go support our guys!</p> 
                             <hgroup class="bible-content tc">
                                 <h5>Speaking of Mammon</h5></hgroup>
                             <p>All these titles - with limited exceptions are widely available. This list is not up for debate or suggestion. It is simply a guide that covers solely the NineNeins mission as well as a few different options/alternatives - nothing more and nothing less.</p>
@@ -51,7 +52,7 @@
                             <p>Most non-corporate book shops will require Crypto in which is a double edge sword. Crypto can be a great strength or a great weakness.</p>
                     <hgroup aria-label="abookstitle" class="bible-content">
                         <h5>Audio Books</h5></hgroup>
-                            <p>Audio Books are a means which many rely on and so due to being "Audio" I figured this be the best place for them.</p>                     
+                            <p>Audio Books are a means which many rely on and so due to being "audio" version of books, I figured this be the best place for them to go.</p>                     
                     <hgroup aria-label="lecturetitle" class="bible-content">
                         <h5>Lectures, Speeches, and Sermons</h5></hgroup>
                             <p>This section would not be complete without them.</p></section>
