--- a/Frame/Layout/6_ReadMore/videoinfowrap.html
+++ b/Frame/Layout/6_ReadMore/videoinfowrap.html
@@ -21,15 +21,24 @@
                 <section aria-label="VisualCulture" class="comment-content">
                     <hgroup class="bible-content tc">
                         <h5>Videos</h5></hgroup>
-                            <p>The goal here is focused on merely the most inspirational, powerful, and best of all presentation productions.<br>
-                            Much of the content in pro-White circles is uncompressed makeing buffering and downloading an issue not to mention even dedicated search features are an unorganized hit and miss.<br>
+                            <p>The goal here is focused on merely the most inspirational, powerful, and best of all presentation productions.<br><br>
+                            Nearly all of the content in pro-White circles is uncompressed, which makes the files ridiculously large creating buffering and downloading an issue. Need I mention that even dedicated search features of pro-White content are an unorganized hit and miss.
+                            <br><br>
                             The goal with NineNeins videos is to remedy these factors to make a more mainline, superfast stream - for a more enjoyable and shareable experience.</p>
                     <hgroup class="bible-content">
                         <h5>Podcast</h5></hgroup>
-                            <p>Since podcast noramlly come with video but not always it felt only fitting to add them here.<br>As most are aware I am no fan at all of podcasters, talking heads, and other worthless paywall intellectuals in general.<br>This does not mean there are not good voices out there, doing amazing works with shows that are informative, entertaining, and all around a great joy.<br>This is sadly just the absolute minority in these tube spheres.</p><p>For example there are only 2 presented here - to be fair there are 4 others under consideration.<br> I just have not decided if they are NineNeins mission focused or incorporateable into the development as of now. I feel it safe to say a couple will be added in coming days.</p>
+                            <p>Although videos are typically included within podcasts, it seemed only appropriate to include them here.
+                            <br><br>
+                            I personally am not a fan of talking heads, podcasters, or other worthless paywall intellectuals in general, as most of you are aware. Yet, this is not to imply that there aren't any excellent voices out there producing incredible works with educational, enjoyable, and all-around delightful concerts. Sadly, they are the absolute minority in these tube spheres.
+                            <br><br>
+                            For example there are only 2 presented here - to be fair there are 4 others under consideration.
+                            <br><br> 
+                            I just have not decided if they are NineNeins mission focused or incorporateable into the development as of now. I feel it safe to say a couple will be added in coming days.</p>
                     <hgroup aria-label="channeltitle" class="bible-content">
                         <h5>Channels</h5></hgroup>
-                            <p>This has been a challenge with all the different platforms from Shing(streams), Piped(uploads), Bitchute(channels), Odyessy(channels/streams), etc...<br>I do not want to invest time manageing different video accounts or constantly bouncing between for whatever reason. That being said there are Channels I do think deserve recognition and will be featured here no matter platform.</p>
+                            <p>This has been a challenge with all the different platforms from GoyimTv(all around), Shing(streams), Piped(uploads), Bitchute(channels), Odyessy(channels/streams), etc...
+                            <br><br>
+                            I do not want to invest time manageing different video accounts or constantly bouncing between for whatever reason. That being said there are Channels I do think deserve recognition and will be featured here no matter platform.</p>
                         </section>
                     </div></div></div>
                 </section></div>
